홈 화면 크래시 이슈 해결